# basketball-project

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.frontend  README.md  SESSION.md  SETUP.md  csv_headers.txt  csv_line_counts.json  docker-compose.yml  next-env.d.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  ruff.toml  tsconfig.json
analysis/csv/: README.md
analysis/csv/src/: analysis_types.py  basketball_validator.py  csv_analysis.py  csv_type_inferrer.py  data_quality_analyzer.py  report_generator.py  visualization_generator.py
api/: __init__.py  config.py  db.py  deps.py  logging_utils.py  main.py  metrics_local.py  models.py  models_v2.py  query_builder.py
api/middleware/: __init__.py  auth.py  rate_limit.py
api/routers/: __init__.py  core_games.py  core_pbp.py  core_players.py  core_seasons.py  core_teams.py  health.py  stats_player_seasons.py  stats_team_seasons.py  tools_event_finder.py  tools_leaderboards.py  tools_player_finder.py  tools_span.py  tools_splits.py  tools_streaks.py  tools_team_finder.py  tools_versus.py  v2_metrics.py  v2_saved_queries.py  v2_tools_leaderboards.py  v2_tools_spans.py  v2_tools_splits.py  v2_tools_streaks.py  v2_tools_versus.py
app/: layout.tsx  page.tsx
app/games/: page.tsx
app/games/[game_id]/: page.tsx
app/players/: page.tsx
app/players/[player_id]/: page.tsx
app/seasons/: page.tsx
app/seasons/[season]/: page.tsx
app/teams/: page.tsx
app/teams/[team_id]/: page.tsx
app/tools/: page.tsx
app/tools/leaderboards/: page.tsx
app/tools/player-game-finder/: page.tsx
app/tools/player-season-finder/: page.tsx
app/tools/span-finder/: page.tsx
app/tools/splits/: page.tsx
app/tools/streak-finder/: page.tsx
app/tools/team-game-finder/: page.tsx
app/tools/team-season-finder/: page.tsx
app/tools/versus-finder/: page.tsx
components/: LayoutShell.tsx  NavBar.tsx  index.ts  shared.tsx
db/: schema.sql
db/migrations/: 001_initial_schema.sql  002_advanced_views.sql  002_team_dimension_scd.sql  003_etl_metadata.sql  003_games_table_surrogate_keys.sql  004_additional_tables.sql
docs/: API_ENDPOINTS.md  DATABASE_SCHEMA.md  IMPLEMENTATION_PHASES.md  TEAM_DIMENSION_IMPLEMENTATION_SUMMARY.md  TEAM_DIMENSION_SCD.md  ingestion_manifest.yaml  phase_0_csv_inventory.json  schema_overview.md
docs/audit/api/: contracts_core.md  contracts_tools.md  contracts_v2.md  global_behavior.md  middleware_behavior.md  models_db_alignment.md
docs/audit/db/: migrations_map.md  schema_catalog.md  schema_vs_docs_inconsistencies.md
docs/audit/etl/: expectations_gaps.md  expectations_map.md
docs/audit/lineage/: csv_to_db.md  entities.md
docs/audit/metrics/: endpoints_vs_registry.md  (+1 more)
etl/: __init__.py  bulk_loader.py  config.py  cross_file_validator.py  db.py  expectations.yaml  expectations_loader.py  id_resolution.py  incremental_loader.py  index_manager.py  load_awards_and_draft.py  load_dimensions.py  load_games_and_boxscores.py  load_inactive.py  load_metadata.py  load_pbp.py  load_player_seasons.py  load_team_dimension.py  load_team_seasons.py  logging_utils.py  manifest.py  paths.py  post_load_validator.py  schema_drift.py  validate.py  validate_data.py  validate_metrics.py
metrics/: registry.py  registry.yaml
misc/: chathistory.md
scripts/: cli.py  run_benchmarks.py  run_full_etl.py  run_full_etl_optimized.py  validate_manifest.py
scripts/csv/: csv_analysis.py
styles/: globals.css
tests/: test_api_smoke.py  test_tools_endpoints.py
(+6 files in other folders)
