[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-hoops-stats-api"
version = "0.1.0"
description = "Local Basketball Stats API"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "sqlalchemy==2.0.23",
    "asyncpg==0.29.0",
    "alembic==1.12.1",
    "python-dotenv==1.0.0",
    "jinja2==3.1.2",
    "aiofiles==23.2.1",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "httpx==0.25.2",
    "prometheus-client==0.19.0",
    "structlog==23.2.0",
]

[project.optional-dependencies]
dev = [
    "mypy==1.7.1",
    "ruff==0.4.1",
    "black==23.11.0",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "httpx==0.25.2",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["pydantic.*", "fastapi.*", "sqlalchemy.*", "alembic.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 79
select = ["E", "W", "F", "B", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "BND", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "SLF", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]
ignore = ["S101", "S603", "S607"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"*/migrations/*.py" = ["ALC"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"